[package]
name = "atomos"
version = "0.1.0"
authors = ["dawson"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
particle = { path = "src/particle" }
physics = { path = "src/physics" }
render = { path = "src/render" }
minifloat = { path = "src/minifloat" }
